<resources>
    <string name="app_name">Skilsss</string>
    <string name="login">Login</string>
    <string name="pleaselogin">Please login to your account.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="donthave_account">Don’t have an account?</string>
    <string name="create_now">Create new now!</string>
    <string name="terms">By signing up, you are agreewith our Terms &amp; Conditions</string>
    <string name="skilledPeopleNearYou">Skilled People Near You</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="Verification">We will sent Verification code to this number</string>
    <string name="thisNumber">this number</string>
    <string name="next">NEXT</string>
    <string name="OTPVerification">OTP Verification</string>
    <string name="CheckYour">Check Your</string>
    <string name="Phone">Phone</string>
    <string name="REGISTER">REGISTER</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="companyName">Company Name (Optional)</string>
    <string name="emailID">Email ID</string>
    <string name="password">Password</string>
    <string name="city">City</string>
    <string name="certification">Certification (If Any)</string>
    <string name="profileDescription">Profile Description about skills(with in 200 words)</string>
    <string name="addProfile">Add Profile</string>
    <string name="addSkills">Add Skills</string>
    <string name="selectSkills">Select Skills</string>
    <string name="electrician">Electrician</string>
    <string name="plumber">Plumber</string>
    <string name="maid">Maid</string>
    <string name="carbender">Carbender</string>
    <string name="Security">Security Guard</string>
    <string name="teacher">Teacher</string>
    <string name="availabilityTiming">Availability Timing</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="changeMySkills">Change My Skills</string>
    <string name="UPDATE">Update</string>
    <string name="RENEW">Renew</string>
    <string name="selectLanguage">Select Language</string>
    <string name="selectappLanguage">Select Your App language</string>
    <string name="deleteProfile">Delete User</string>
    <string name="deleteyourprofiler">Are You Sure Want To Delete Your Profile?</string>
    <string name="Delete">Delete</string>
    <string name="deleteAndRecreate">Delete And Recreate</string>
    <string name="Cancel">Cancel</string>
    <string name="professionals">Professionals</string>
    <string name="LOGOUT">Logout</string>
    <string name="editProfile">Edit Profile</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="termsandConditions">Terms And Conditions</string>
    <string name="emailSupport">Email Support</string>
    <string name="changeLanguage">Change Language</string>
    <string name="myFavourites">My Favourites</string>
    <string name="myPostings">My Postings</string>
    <string name="postings">Postings</string>
    <string name="posting">Posting</string>
    <string name="chat">Chat</string>
    <string name="needExperiancedPlumber">Need Experience Plumber</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="selectSkillsoption">Select Skills (Optional)</string>
    <string name="addPhotos">Add Photos</string>
    <string name="selectRequiredSkills">Select Required Skills</string>
    <string name="Descriptionabout">Description about Requirements</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatList">Chat List</string>
    <string name="submit">Submit</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="city_optional">City (Optional)</string>
    <string name="state_optional">State (Optional)</string>
    <string name="country_optional">Country (Optional)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_terms">ActivityTerms</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="add_banner_images">Add Business Images</string>
    <string name="saved_postings">Saved Postings</string>
    <string name="change_password">Change Password</string>
    <string name="chat_list">Chat List</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="add_new_skill">Add New Skill</string>
    <string name="skill_name">Skill Name</string>
    <string name="about_skill">About Skill</string>
    <string name="add_skill_image">Add Skill Image</string>
    <string name="buy_ads">Buy Ads</string>
    <string name="conformation">Conformation</string>
    <string name="plan_status">Plan Status</string>
    <string name="one_select_the_plan_not_edting">Once selected plan cannot be changed later</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="plan_details">Plan Details</string>
    <string name="notes">Notes</string>
    <string name="notifications">Notifications</string>
    <string name="new_posting">New posting</string>
    <string name="select_certifications">Select Certifications</string>
    <string name="professiona">Users</string>
    <string name="postin">Postings</string>
    <string name="search_with_skills_and_name">Search with skills and name</string>
    <string name="professional_details">Users Details</string>
    <string name="skills">Skills :</string>
    <string name="add_rating">Add Rating</string>
    <string name="posting_details">Posting Details</string>
    <string name="add_posting">Add posting</string>
    <string name="add_photos">Add Photos</string>
    <string name="ads_management_panel">Ads Management Panel :</string>
    <string name="username_and_password_will_be_your_app">Username and Password will be your app</string>
    <string name="username_and_password">Username and Password</string>
    <string name="plandetails">plandetails :</string>
    <string name="plan">plan :</string>
    <string name="cost">cost :</string>
    <string name="validity">validity :</string>
    <string name="notes_1">1) Once you selected location detail\'s you can\'t modify</string>
    <string name="notes_2">2) You can post unlimited Ad\'s on selected validity</string>
    <string name="notes_3">3) You can post advertisement on our advertisement panel</string>
    <string name="Firs_Name_Required">First Name Required</string>
    <string name="Last_Name_Required">Last Name Required</string>
    <string name="Email_Required">Email Required</string>
    <string name="Password_Required">Password Required</string>
    <string name="Profile_Image_Required">"Profile Image Required"</string>
    <string name="Pleas_Choose_Country_and_State">"Please Choose Country and State"</string>
    <string name="Are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="new_password">New Password</string>
    <string name="password_again">Password again</string>
    <string name="old_password">Old password</string>
    <string name="settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="edit_posting">Edit posting</string>
    <string name="edit_skills">Edit Skills</string>
    <string name="enter_new_skill_name">Enter New Skill Name</string>
    <string name="select_time">Select Time</string>
    <string name="select_picture">Select Picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="others">Others</string>
    <string name="search">Search</string>
    <string name="are_you_sure_do_you_want_to_back">Are you sure? do you want to go back</string>
    <string name="address">Select Address</string>
    <string name="todo">todo</string>
    <string name="enter_your_first_name">Enter your FirstName</string>
    <string name="enter_your_last_name">Enter your LastName</string>
    <string name="please_valid_e_mail">Please enter a valid E-mail</string>
    <string name="Enter_about_skill">Enter about skill</string>
    <string name="Upload_Skill_Image">Upload Skill Image</string>
    <string name="No_Internet_Connection">No Internet Connection</string>
    <string name="Permissin_is_denied">Permissin is denied</string>
    <string name="Image_removed">Image removed!</string>
    <string name="Some_error_occurred">Some error occurred!</string>
    <string name="Please_Select">Please Select Minimum One Image</string>
    <string name="Please_Select_banner">Please Select Minimum One Banner Image</string>
    <string name="Enter_the_valid_OTP">Enter The Valid OTP</string>
    <string name="Please_enter_the_otp">Please enter the otp</string>
    <string name="Please_Select_Your_Language">Please Select Your Language</string>
    <string name="Please_Term_Condition_Agree">Please accept terms &amp; condition</string>
    <string name="Enter_the_password">Enter the password</string>
    <string name="Please_Enter_New_Password">Please Enter New Password"</string>
    <string name="Please_Enter_Confirm_Password">Please Enter Confirm Password</string>
    <string name="Please_select_post_images">Please select post images</string>
    <string name="Please_Enter_Old_Password">Please Enter Old Password</string>
    <string name="Password_Not_Match">Password Not Match</string>
    <string name="or">(OR)</string>
    <string name="days">Days</string>
    <string name="plan1">Local (25 Km Surrounding)</string>
    <string name="plan2">Silver (City)</string>
    <string name="plan3">Gold (State)</string>
    <string name="plan4">Diamond (Country)</string>
    <string name="plan_expired">Plan Expired</string>
    <string name="buy_now">Buy Now</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="malayalam">മലയാളം</string>
    <string name="tamil">தமிழ்</string>
    <string name="french">Français</string>
    <string name="spanish">Española</string>
    <string name="arabic">عربي</string>
    <string name="my_ads">My Purchase</string>
    <string name="referral_code">Referral code</string>
    <string name="my_earnings">My Earnings</string>
    <string name="withdraw_request">Withdraw request</string>
    <string name="enter_a_upi_id_or_paypal_id">Enter a UPI id or Paypal Email</string>
    <string name="balance">Balance</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="earnings">Earnings</string>
    <string name="view">View</string>
    <string name="change_skills">Change Skills</string>
    <string name="regional_language">Regional Language</string>
    <string name="international_language">International Language</string>
    <string name="location">Location</string>
    <string name="posts_around_you">Posts Around You</string>
    <string name="peoples_around_you">Peoples Around You</string>
    <string name="posted_by">Posted By</string>
    <string name="add_new_post">Add new Post</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="upi_or_paypal">UPI or Paypal</string>
    <string name="skilsss">Skilsss</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home_menu">Home</string>
    <string name="hire">For Hire</string>
    <string name="offers">Offers</string>
</resources>