<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/explore"
        android:title="@string/home_menu"
        android:icon="@drawable/home_new_menu_icon"
        />
    <item
        android:id="@+id/chat"
        android:title="@string/offers"
        android:icon="@drawable/badge"
        />
    <item
        android:id="@+id/home"
        android:title=""
        />
    <item
        android:id="@+id/saved"
        android:title="@string/hire"
        android:enabled="true"
        android:icon="@drawable/car_new_image"
      />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_bottom"
        android:iconTint="@color/white" />

</menu>