<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_margin="15dp"
    android:orientation="vertical"
    android:background="@drawable/btn_gray_filled">

    <TextView
        android:id="@+id/cp1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@drawable/btn_new_white">

        <EditText
            android:id="@+id/txt_oldpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="textStart"
            android:paddingLeft="10dp"
            android:hint="@string/old_password"
            android:textColor="@color/black"
            android:inputType="textPassword"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <EditText
            android:id="@+id/txt_newpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="textStart"
            android:paddingLeft="10dp"
            android:hint="@string/new_password"
            android:textColor="@color/black"
            android:inputType="textPassword"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/txt_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="textStart"
            android:paddingLeft="10dp"
            android:hint="@string/password_again"
            android:textColor="@color/black"
            android:inputType="textPassword"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
       android:layout_marginBottom="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="@color/appcolour" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/txt_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/appcolour" />
    </LinearLayout>





</LinearLayout>