<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_top"
        android:gravity="center"
        android:text="@string/select_city"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:background="@color/white"
        android:id="@+id/other_option"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/others"
        android:textColor="@color/appcolour"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_city" />

    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:id="@+id/city_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/others_txt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:gravity="start"
            android:layout_marginStart="5dp"
            android:hint="@string/state_optional"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/distric_dialogbox_close"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/dialog_bottom_right"
            android:gravity="center"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/distric_dialogbox_done"
            android:text="@string/done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/dialog_bottom_left"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>