<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_top"
        android:gravity="center"
        android:id="@+id/txt_title"
        android:text="@string/conformation"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_descripition"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/one_select_the_plan_not_edting"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:background="@drawable/dialog_bottom">
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_cancel_dialog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_ok_dialog"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>